--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,6 @@
-
-name: VMPE-Action
-main: bansystem\BanSystem
-version: 2.0.1
-author: VMPE Development Team
-api: [3.0.0-ALPHA9, 3.0.0-ALPHA10]
-description: A ban system for Pocketmine only, running Latest PMMP-Builds.
+name: 
+main: 
+version: 
+author: 
+api: 
+description: 
